fix horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ html, body {
     font-size: 16px;
     font-family: Playpen Sans, sans-serif;
     color: #424551;
-
+    overflow-x: hidden;
 }
 
 
